# rustygram

./: .gitignore  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  example.rs
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  parse-error.md  unknown-telegram-error.md
.github/workflows/: ci.yml
src/: bot.rs  errors.rs  lib.rs  tests.rs  types.rs  utils.rs
src/examples/: bot.rs
