[package]
name = "rustygram"
version = "0.1.0"
edition = "2021"
authors = ["Wasin Thonkaew <https://github.com/extremelySunnyYK>"]
description = "RustyGram is a minimal and blazing fast telegram notification framework for Rust"
repository = "https://github.com/ExtremelySunnyYK/rustygram"
keywords = ["telegram", "bot", "api", "notification", "trading"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features=["json"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["macros"] }
